--- a/docs/professor/alexandre_rodrigues_monge.mdx
+++ b/docs/professor/alexandre_rodrigues_monge.mdx
@@ -11,7 +11,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         },
@@ -21,7 +21,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
         },
@@ -76,7 +76,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
         }
