--- a/docs/professor/elizangela_cavazzini_cesca.mdx
+++ b/docs/professor/elizangela_cavazzini_cesca.mdx
@@ -10,24 +10,13 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos da Química",
-          size: 2,
-          teachers: [
-            "Daniele de Almeida Paula",
-            "Elizangela Cavazzini Cesca"
-          ],
-          classroom: "Sala 2-2",
-          students: "TAL2023",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Química I",
+          subject: "Química II",
           size: 2,
           teachers: [
             "Elizangela Cavazzini Cesca"
           ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
+          classroom: "Laboratório de Química",
+          students: "IIW2022A",
           time: "07:30 - 08:20"
         },
         {
@@ -36,9 +25,19 @@ const data = {
           teachers: [
             "Elizangela Cavazzini Cesca"
           ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "09:25 - 10:15"
+          classroom: "Sala 11-2",
+          students: "AGO2022",
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Química III",
+          size: 2,
+          teachers: [
+            "Elizangela Cavazzini Cesca"
+          ],
+          classroom: "Laboratório de Química",
+          students: "AGO2021",
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -49,6 +48,17 @@ const data = {
     {
       dayName: "Quinta-Feira",
       dayClasses: [
+        {
+          subject: "Fundamentos da Química",
+          size: 2,
+          teachers: [
+            "Daniele de Almeida Paula",
+            "Elizangela Cavazzini Cesca"
+          ],
+          classroom: "Sala 2-2",
+          students: "TAL2023",
+          time: "19:00 - 19:50"
+        },
         {
           subject: "Química 2",
           size: 2,
@@ -68,16 +78,6 @@ const data = {
           classroom: "Laboratório de Química",
           students: "EIN2021",
           time: "11:05 - 11:55"
-        },
-        {
-          subject: "Química I",
-          size: 2,
-          teachers: [
-            "Elizangela Cavazzini Cesca"
-          ],
-          classroom: "Sala 8-2",
-          students: "COM2023",
-          time: "09:25 - 10:15"
         }
       ]
     },
