--- a/docs/professor/fabio_antonio_da_silva.mdx
+++ b/docs/professor/fabio_antonio_da_silva.mdx
@@ -21,7 +21,7 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         },
@@ -141,7 +141,7 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "11:05 - 11:55"
         }
@@ -160,7 +160,7 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "09:25 - 10:15"
         },
@@ -170,7 +170,7 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "10:15 - 11:05"
         }
