--- a/docs/professor/josiane_hammes.mdx
+++ b/docs/professor/josiane_hammes.mdx
@@ -15,7 +15,7 @@ const data = {
           teachers: [
             "Josiane Hammes"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         }
@@ -34,7 +34,7 @@ const data = {
           teachers: [
             "Josiane Hammes"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         }
