--- a/docs/professor/josiane_paula_maltauro.mdx
+++ b/docs/professor/josiane_paula_maltauro.mdx
@@ -13,7 +13,7 @@ const data = {
           ],
           classroom: "Sala 6-2",
           students: "AGO2023",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Cultura e Cinema Nacional III",
@@ -36,9 +36,19 @@ const data = {
           teachers: [
             "Josiane Paula Maltauro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
-          time: "11:05 - 11:55"
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Arte I",
+          size: 1,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "Sala 6",
+          students: "IIW2022B",
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -53,24 +63,13 @@ const data = {
           ],
           classroom: "Sala 11-2",
           students: "AGO2022",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Arte I",
-          size: 1,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "09:25 - 10:15"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
