--- a/docs/professor/kathia_regina_kunzler_bechlin.mdx
+++ b/docs/professor/kathia_regina_kunzler_bechlin.mdx
@@ -8,15 +8,23 @@ const data = {
     },
     {
       dayName: "Terça-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Química II",
+          subject: "Química I",
           size: 2,
           teachers: [
             "Kathia Regina Kunzler Bechlin"
           ],
-          classroom: "Laboratório de Química",
-          students: "IIW2022A",
+          classroom: "Sala 8",
+          students: "IIW2023B",
           time: "07:30 - 08:20"
         },
         {
@@ -25,33 +33,25 @@ const data = {
           teachers: [
             "Kathia Regina Kunzler Bechlin"
           ],
-          classroom: "Sala 11-2",
-          students: "AGO2022",
+          classroom: "Sala 6",
+          students: "IIW2022B",
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "Química III",
-          size: 2,
-          teachers: [
-            "Kathia Regina Kunzler Bechlin"
-          ],
-          classroom: "Laboratório de Química",
-          students: "AGO2021",
-          time: "13:10 - 14:00"
         }
       ]
     },
     {
-      dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Química I",
+          size: 2,
+          teachers: [
+            "Kathia Regina Kunzler Bechlin"
+          ],
+          classroom: "Sala 8-2",
+          students: "COM2023",
+          time: "15:05 - 15:55"
+        },
         {
           subject: "Química I",
           size: 2,
