--- a/docs/professor/milton_aparecido_azevedo.mdx
+++ b/docs/professor/milton_aparecido_azevedo.mdx
@@ -69,7 +69,7 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         },
@@ -79,7 +79,7 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "07:30 - 08:20"
         },
@@ -89,7 +89,7 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "08:20 - 09:10"
         },
