--- a/docs/professor/novo_professor_de_administracao_pss.mdx
+++ b/docs/professor/novo_professor_de_administracao_pss.mdx
@@ -9,7 +9,7 @@ const data = {
           subject: "Gestão Empresarial",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 13-2",
           students: "TGC2023",
@@ -19,7 +19,7 @@ const data = {
           subject: "Plano de Negócio",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 11-2",
           students: "TGC2021",
@@ -38,7 +38,7 @@ const data = {
           subject: "Gestão Empresarial",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 13-2",
           students: "TGC2023",
@@ -48,7 +48,7 @@ const data = {
           subject: "Gestão de pessoas",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 8-2",
           students: "COM2023",
@@ -63,17 +63,27 @@ const data = {
           subject: "Gestão Estratégica de Pessoas",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 3-1",
           students: "TGC2022",
           time: "19:00 - 19:50"
         },
         {
+          subject: "Projeto Integrador I",
+          size: 2,
+          teachers: [
+            "Novo professor de Administração PSS"
+          ],
+          classroom: "Sala 8-2",
+          students: "COM2023",
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Técnicas de Vendas e Negociação",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 3-1",
           students: "TGC2022",
@@ -88,7 +98,7 @@ const data = {
           subject: "Fundamentos da Administração",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 8-2",
           students: "COM2023",
@@ -98,7 +108,7 @@ const data = {
           subject: "Planejamento e Gestão estratégica",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 11-2",
           students: "TGC2021",
@@ -108,21 +118,11 @@ const data = {
           subject: "Planejamento e Gestão estratégica",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 11-2",
           students: "TGC2021",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Projeto Integrador I",
-          size: 2,
-          teachers: [
-            "Novo professor de Administração PSS - 40h"
-          ],
-          classroom: "Sala 8-2",
-          students: "COM2023",
-          time: "15:05 - 15:55"
         }
       ]
     }
