--- a/docs/professor/paula_magalhaes_souza_deccache.mdx
+++ b/docs/professor/paula_magalhaes_souza_deccache.mdx
@@ -21,7 +21,7 @@ const data = {
           teachers: [
             "Paula Magalhães Souza Deccache"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "10:15 - 11:05"
         },
@@ -31,7 +31,7 @@ const data = {
           teachers: [
             "Paula Magalhães Souza Deccache"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "07:30 - 08:20"
         }
