--- a/docs/professor/renato_lada_guerreiro.mdx
+++ b/docs/professor/renato_lada_guerreiro.mdx
@@ -11,7 +11,7 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "09:25 - 10:15"
         },
@@ -50,7 +50,7 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "11:05 - 11:55"
         }
