--- a/docs/professor/talita_bortolini.mdx
+++ b/docs/professor/talita_bortolini.mdx
@@ -11,7 +11,7 @@ const data = {
           teachers: [
             "Talita Bortolini"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "15:05 - 15:55"
         },
@@ -21,7 +21,7 @@ const data = {
           teachers: [
             "Talita Bortolini"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "13:10 - 14:00"
         }
