--- a/docs/sala/laboratorio_de_eletronica.mdx
+++ b/docs/sala/laboratorio_de_eletronica.mdx
@@ -9,11 +9,21 @@ const data = {
           subject: "Eletrônica de Potência",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Laboratório de Eletrônica",
           students: "ELM2022",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Instrumentos de Medidas Elétricas",
+          size: 2,
+          teachers: [
+            "Novo Professor de Elétrica PSS"
+          ],
+          classroom: "Laboratório de Eletrônica",
+          students: "ELE2023",
+          time: "19:00 - 19:50"
         },
         {
           subject: "Eletrônica",
@@ -89,7 +99,7 @@ const data = {
           subject: "Eletrônica de Potência",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Laboratório de Eletrônica",
           students: "ELM2022",
@@ -144,18 +154,7 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Instrumentos de Medidas Elétricas",
-          size: 2,
-          teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
-          ],
-          classroom: "Laboratório de Eletrônica",
-          students: "ELE2023",
-          time: "19:00 - 19:50"
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
