--- a/docs/sala/laboratorio_de_informatica_c.mdx
+++ b/docs/sala/laboratorio_de_informatica_c.mdx
@@ -54,7 +54,18 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Informática Básica",
+          size: 1,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: "TAL2023",
+          time: "19:50 - 20:40"
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -98,16 +109,6 @@ const data = {
           classroom: "Laboratório de Informatica C",
           students: "AGO2021",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Informática Básica",
-          size: 1,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: "TAL2023",
-          time: "19:50 - 20:40"
         }
       ]
     },
