--- a/docs/sala/laboratorio_de_quimica.mdx
+++ b/docs/sala/laboratorio_de_quimica.mdx
@@ -33,7 +33,7 @@ const data = {
           subject: "Química II",
           size: 2,
           teachers: [
-            "Kathia Regina Kunzler Bechlin"
+            "Elizangela Cavazzini Cesca"
           ],
           classroom: "Laboratório de Química",
           students: "IIW2022A",
@@ -43,7 +43,7 @@ const data = {
           subject: "Química III",
           size: 2,
           teachers: [
-            "Kathia Regina Kunzler Bechlin"
+            "Elizangela Cavazzini Cesca"
           ],
           classroom: "Laboratório de Química",
           students: "AGO2021",
