--- a/docs/sala/sala_11-2.mdx
+++ b/docs/sala/sala_11-2.mdx
@@ -39,7 +39,7 @@ const data = {
           subject: "Plano de Negócio",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 11-2",
           students: "TGC2021",
@@ -60,16 +60,6 @@ const data = {
     {
       dayName: "Terça-Feira",
       dayClasses: [
-        {
-          subject: "Logística aplicada",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 11-2",
-          students: "TGC2021",
-          time: "19:00 - 19:50"
-        },
         {
           subject: "Gestão Ambiental e Desenvolvimento Sustentável",
           size: 2,
@@ -94,11 +84,21 @@ const data = {
           subject: "Química II",
           size: 2,
           teachers: [
-            "Kathia Regina Kunzler Bechlin"
+            "Elizangela Cavazzini Cesca"
           ],
           classroom: "Sala 11-2",
           students: "AGO2022",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Gestão da Informação e documentação",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "Sala 11-2",
+          students: "TGC2021",
+          time: "19:00 - 19:50"
         },
         {
           subject: "Produção Animal I",
@@ -146,6 +146,16 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Logística aplicada",
+          size: 2,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "Sala 11-2",
+          students: "TGC2021",
+          time: "19:00 - 19:50"
+        },
+        {
           subject: "Cultura e Cinema Nacional II",
           size: 1,
           teachers: [
@@ -153,17 +163,7 @@ const data = {
           ],
           classroom: "Sala 11-2",
           students: "AGO2022",
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Gestão da Informação e documentação",
-          size: 2,
-          teachers: [
-            "Keyla Christina Almeida Portela"
-          ],
-          classroom: "Sala 11-2",
-          students: "TGC2021",
-          time: "19:00 - 19:50"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Meteorologia e Bioclimatologia na Agropecuária",
@@ -173,7 +173,7 @@ const data = {
           ],
           classroom: "Sala 11-2",
           students: "AGO2022",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Língua Portuguesa e Literatura II",
@@ -211,6 +211,16 @@ const data = {
           time: "10:15 - 11:05"
         },
         {
+          subject: "Sistemas Agroflorestais",
+          size: 2,
+          teachers: [
+            "Elias Franco"
+          ],
+          classroom: "Sala 11-2",
+          students: "AGO2022",
+          time: "13:10 - 14:00"
+        },
+        {
           subject: "Comércio Eletrônico e Mídias Digitais",
           size: 2,
           teachers: [
@@ -239,16 +249,6 @@ const data = {
           classroom: "Sala 11-2",
           students: "AGO2022",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Sociologia Rural",
-          size: 2,
-          teachers: [
-            "Tatiane Martinazzo Portz"
-          ],
-          classroom: "Sala 11-2",
-          students: "AGO2022",
-          time: "13:10 - 14:00"
         }
       ]
     },
@@ -266,20 +266,10 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Sistemas Agroflorestais",
-          size: 2,
-          teachers: [
-            "Elias Franco"
-          ],
-          classroom: "Sala 11-2",
-          students: "AGO2022",
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Planejamento e Gestão estratégica",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 11-2",
           students: "TGC2021",
@@ -289,7 +279,7 @@ const data = {
           subject: "Planejamento e Gestão estratégica",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 11-2",
           students: "TGC2021",
@@ -304,6 +294,16 @@ const data = {
           classroom: "Sala 11-2",
           students: "AGO2022",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Sociologia Rural",
+          size: 2,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 11-2",
+          students: "AGO2022",
+          time: "10:15 - 11:05"
         }
       ]
     }
