--- a/docs/sala/sala_6-2.mdx
+++ b/docs/sala/sala_6-2.mdx
@@ -23,7 +23,7 @@ const data = {
           ],
           classroom: "Sala 6-2",
           students: "AGO2023",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Língua Portuguesa e Literatura I",
@@ -43,7 +43,7 @@ const data = {
           ],
           classroom: "Sala 6-2",
           students: "AGO2023",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -159,7 +159,7 @@ const data = {
           subject: "Eletrônica de Potência",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -194,7 +194,7 @@ const data = {
           subject: "Eletrônica de Potência",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -204,7 +204,7 @@ const data = {
           subject: "Instalações elétricas",
           size: 1,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -214,7 +214,7 @@ const data = {
           subject: "Instalações elétricas",
           size: 1,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -249,7 +249,7 @@ const data = {
           subject: "Instalações elétricas",
           size: 1,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -259,7 +259,7 @@ const data = {
           subject: "Instalações elétricas",
           size: 1,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
