--- a/docs/sala/sala_6.mdx
+++ b/docs/sala/sala_6.mdx
@@ -1,6 +1,6 @@
 import { Grid } from "@site/src/components/Grid";
 const data = {
-  title: "BioPark-01",
+  title: "Sala 6",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
@@ -11,7 +11,7 @@ const data = {
           teachers: [
             "Maicon Felipe Malacarne"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "15:05 - 15:55"
         },
@@ -21,7 +21,7 @@ const data = {
           teachers: [
             "Paula Magalhães Souza Deccache"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "07:30 - 08:20"
         },
@@ -31,7 +31,7 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "09:25 - 10:15"
         },
@@ -41,7 +41,7 @@ const data = {
           teachers: [
             "Talita Bortolini"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "13:10 - 14:00"
         }
@@ -51,14 +51,14 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Química II",
-          size: 2,
+          subject: "Arte I",
+          size: 1,
           teachers: [
-            "Elizangela Cavazzini Cesca"
+            "Josiane Paula Maltauro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
-          time: "09:25 - 10:15"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Arte I",
@@ -66,9 +66,9 @@ const data = {
           teachers: [
             "Josiane Paula Maltauro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
-          time: "11:05 - 11:55"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Física II",
@@ -76,9 +76,29 @@ const data = {
           teachers: [
             "Maicon Felipe Malacarne"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "15:05 - 15:55"
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 1,
+          teachers: [
+            "Olavo José Luiz Junior"
+          ],
+          classroom: "Sala 6",
+          students: "IIW2022B",
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Matemática II",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "Sala 6",
+          students: "IIW2022B",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Língua Portuguesa e Literatura II",
@@ -86,7 +106,7 @@ const data = {
           teachers: [
             "Taiana Pensin"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "13:10 - 14:00"
         }
@@ -101,7 +121,7 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "11:05 - 11:55"
         },
@@ -111,7 +131,7 @@ const data = {
           teachers: [
             "Sérgio Augusto Dias Castro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "07:30 - 08:20"
         }
@@ -121,24 +141,24 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Arte I",
-          size: 1,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Matemática II",
+          subject: "Química II",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Kathia Regina Kunzler Bechlin"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 1,
+          teachers: [
+            "Olavo José Luiz Junior"
+          ],
+          classroom: "Sala 6",
+          students: "IIW2022B",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -151,7 +171,7 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "09:25 - 10:15"
         },
@@ -161,7 +181,7 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "07:30 - 08:20"
         },
@@ -171,7 +191,7 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "08:20 - 09:10"
         },
@@ -181,7 +201,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "TDS2023-3S",
           time: "21:00 - 21:50"
         },
@@ -191,7 +211,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "TDS2023-3S",
           time: "19:00 - 19:50"
         }
@@ -274,7 +294,7 @@ const data = {
   ]
 }
 
-# BioPark-01
+# Sala 6
 
 <div>
     {
