--- a/docs/sala/sala_8-2.mdx
+++ b/docs/sala/sala_8-2.mdx
@@ -6,6 +6,16 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Língua Estrangeira: Inglês",
+          size: 2,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes"
+          ],
+          classroom: "Sala 8-2",
+          students: "COM2023",
+          time: "15:05 - 15:55"
+        },
+        {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
@@ -14,16 +24,6 @@ const data = {
           classroom: "Sala 8-2",
           students: "COM2023",
           time: "13:10 - 14:00"
-        },
-        {
-          subject: "Fundamentos da Contabilidade",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 8-2",
-          students: "COM2023",
-          time: "15:05 - 15:55"
         }
       ]
     },
@@ -31,7 +31,7 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Língua Estrangeira: Inglês",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
             "Celina de Oliveira Barbosa Gomes"
@@ -41,10 +41,10 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Língua Portuguesa e Literatura I",
+          subject: "Fundamentos da Contabilidade",
           size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes"
+            "Cesar Gomes de Freitas"
           ],
           classroom: "Sala 8-2",
           students: "COM2023",
@@ -89,7 +89,7 @@ const data = {
           subject: "Gestão de pessoas",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 8-2",
           students: "COM2023",
@@ -121,16 +121,6 @@ const data = {
           time: "21:00 - 21:50"
         },
         {
-          subject: "Química I",
-          size: 2,
-          teachers: [
-            "Elizangela Cavazzini Cesca"
-          ],
-          classroom: "Sala 8-2",
-          students: "COM2023",
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Direito do Trabalho e do consumidor",
           size: 2,
           teachers: [
@@ -149,6 +139,16 @@ const data = {
           classroom: "Sala 8-2",
           students: "COM2023",
           time: "11:05 - 11:55"
+        },
+        {
+          subject: "Projeto Integrador I",
+          size: 2,
+          teachers: [
+            "Novo professor de Administração PSS"
+          ],
+          classroom: "Sala 8-2",
+          students: "COM2023",
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -156,24 +156,24 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos da Administração",
+          subject: "Química I",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
-          ],
-          classroom: "Sala 8-2",
-          students: "COM2023",
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Projeto Integrador I",
-          size: 2,
-          teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Kathia Regina Kunzler Bechlin"
           ],
           classroom: "Sala 8-2",
           students: "COM2023",
           time: "15:05 - 15:55"
+        },
+        {
+          subject: "Fundamentos da Administração",
+          size: 2,
+          teachers: [
+            "Novo professor de Administração PSS"
+          ],
+          classroom: "Sala 8-2",
+          students: "COM2023",
+          time: "13:10 - 14:00"
         }
       ]
     }
