--- a/docs/sala/sala_8.mdx
+++ b/docs/sala/sala_8.mdx
@@ -1,6 +1,6 @@
 import { Grid } from "@site/src/components/Grid";
 const data = {
-  title: "BioPark-02",
+  title: "Sala 8",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
@@ -11,7 +11,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         },
@@ -21,7 +21,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
         },
@@ -31,7 +31,7 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         },
@@ -41,7 +41,7 @@ const data = {
           teachers: [
             "Maicon Felipe Malacarne"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "13:10 - 14:00"
         },
@@ -51,7 +51,7 @@ const data = {
           teachers: [
             "Paula Magalhães Souza Deccache"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "10:15 - 11:05"
         },
@@ -61,7 +61,7 @@ const data = {
           teachers: [
             "Talita Bortolini"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "15:05 - 15:55"
         }
@@ -76,19 +76,9 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Química I",
-          size: 2,
-          teachers: [
-            "Elizangela Cavazzini Cesca"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "07:30 - 08:20"
         },
         {
           subject: "Lingua estrangeira - Inglês",
@@ -96,7 +86,7 @@ const data = {
           teachers: [
             "Josiane Hammes"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         },
@@ -106,7 +96,7 @@ const data = {
           teachers: [
             "Maicon Felipe Malacarne"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "13:10 - 14:00"
         },
@@ -116,9 +106,19 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Matemática I",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "Sala 8",
+          students: "IIW2023B",
+          time: "07:30 - 08:20"
         },
         {
           subject: "Língua Portuguesa e Literatura I",
@@ -126,7 +126,7 @@ const data = {
           teachers: [
             "Taiana Pensin"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "15:05 - 15:55"
         }
@@ -141,7 +141,7 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "11:05 - 11:55"
         },
@@ -151,7 +151,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
         },
@@ -161,7 +161,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         },
@@ -171,7 +171,7 @@ const data = {
           teachers: [
             "Sérgio Augusto Dias Castro"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         }
@@ -181,12 +181,22 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
+          subject: "Química I",
+          size: 2,
+          teachers: [
+            "Kathia Regina Kunzler Bechlin"
+          ],
+          classroom: "Sala 8",
+          students: "IIW2023B",
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Lingua estrangeira - Inglês",
           size: 1,
           teachers: [
             "Josiane Hammes"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         },
@@ -196,7 +206,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         },
@@ -206,19 +216,9 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Matemática I",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "10:15 - 11:05"
         }
       ]
     },
@@ -231,7 +231,7 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "10:15 - 11:05"
         },
@@ -241,7 +241,7 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         },
@@ -251,7 +251,7 @@ const data = {
           teachers: [
             "Olavo José Luiz Junior"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         }
@@ -334,7 +334,7 @@ const data = {
   ]
 }
 
-# BioPark-02
+# Sala 8
 
 <div>
     {
