--- a/docs/turma/ago2021.mdx
+++ b/docs/turma/ago2021.mdx
@@ -74,7 +74,7 @@ const data = {
           subject: "Química III",
           size: 2,
           teachers: [
-            "Kathia Regina Kunzler Bechlin"
+            "Elizangela Cavazzini Cesca"
           ],
           classroom: "Laboratório de Química",
           students: "AGO2021",
