--- a/docs/turma/ago2022.mdx
+++ b/docs/turma/ago2022.mdx
@@ -74,7 +74,7 @@ const data = {
           subject: "Química II",
           size: 2,
           teachers: [
-            "Kathia Regina Kunzler Bechlin"
+            "Elizangela Cavazzini Cesca"
           ],
           classroom: "Sala 11-2",
           students: "AGO2022",
@@ -133,7 +133,7 @@ const data = {
           ],
           classroom: "Sala 11-2",
           students: "AGO2022",
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Meteorologia e Bioclimatologia na Agropecuária",
@@ -143,7 +143,7 @@ const data = {
           ],
           classroom: "Sala 11-2",
           students: "AGO2022",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Língua Portuguesa e Literatura II",
@@ -169,6 +169,16 @@ const data = {
           classroom: "Sala 11-2",
           students: "AGO2022",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Sistemas Agroflorestais",
+          size: 2,
+          teachers: [
+            "Elias Franco"
+          ],
+          classroom: "Sala 11-2",
+          students: "AGO2022",
+          time: "13:10 - 14:00"
         },
         {
           subject: "Biologia II",
@@ -199,16 +209,6 @@ const data = {
           classroom: "Sala 11-2",
           students: "AGO2022",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Sociologia Rural",
-          size: 2,
-          teachers: [
-            "Tatiane Martinazzo Portz"
-          ],
-          classroom: "Sala 11-2",
-          students: "AGO2022",
-          time: "13:10 - 14:00"
         }
       ]
     },
@@ -226,16 +226,6 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Sistemas Agroflorestais",
-          size: 2,
-          teachers: [
-            "Elias Franco"
-          ],
-          classroom: "Sala 11-2",
-          students: "AGO2022",
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "História I",
           size: 1,
           teachers: [
@@ -244,6 +234,16 @@ const data = {
           classroom: "Sala 11-2",
           students: "AGO2022",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Sociologia Rural",
+          size: 2,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 11-2",
+          students: "AGO2022",
+          time: "10:15 - 11:05"
         }
       ]
     }
