--- a/docs/turma/ele2022.mdx
+++ b/docs/turma/ele2022.mdx
@@ -69,7 +69,7 @@ const data = {
           subject: "Eletrônica de Potência",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -84,7 +84,7 @@ const data = {
           subject: "Eletrônica de Potência",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -94,7 +94,7 @@ const data = {
           subject: "Instalações elétricas",
           size: 1,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -104,7 +104,7 @@ const data = {
           subject: "Instalações elétricas",
           size: 1,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -119,7 +119,7 @@ const data = {
           subject: "Instalações elétricas",
           size: 1,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -129,7 +129,7 @@ const data = {
           subject: "Instalações elétricas",
           size: 1,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
