--- a/docs/turma/ele2023.mdx
+++ b/docs/turma/ele2023.mdx
@@ -6,24 +6,24 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos da Matemática",
+          subject: "Comunicação e Expressão",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "Sala 7-2",
-          students: "ELE2023",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Fundamentos da Matemática",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Kátia Cristiane Kobus Novaes"
           ],
           classroom: "Sala 7-2",
           students: "ELE2023",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Instrumentos de Medidas Elétricas",
+          size: 2,
+          teachers: [
+            "Novo Professor de Elétrica PSS"
+          ],
+          classroom: "Laboratório de Eletrônica",
+          students: "ELE2023",
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -56,20 +56,20 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Física Aplicada",
+          subject: "Fundamentos da Matemática",
           size: 2,
           teachers: [
-            "Bruno Garcia Bonfim"
+            "Sérgio Augusto Dias Castro"
           ],
           classroom: "Sala 7-2",
           students: "ELE2023",
           time: "19:00 - 19:50"
         },
         {
-          subject: "Comunicação e Expressão",
+          subject: "Fundamentos da Matemática",
           size: 2,
           teachers: [
-            "Kátia Cristiane Kobus Novaes"
+            "Sérgio Augusto Dias Castro"
           ],
           classroom: "Sala 7-2",
           students: "ELE2023",
@@ -106,6 +106,16 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
+          subject: "Física Aplicada",
+          size: 2,
+          teachers: [
+            "Bruno Garcia Bonfim"
+          ],
+          classroom: "Sala 7-2",
+          students: "ELE2023",
+          time: "19:00 - 19:50"
+        },
+        {
           subject: "Informática Instrumental",
           size: 2,
           teachers: [
@@ -114,16 +124,6 @@ const data = {
           classroom: "Laboratório de Informatica C",
           students: "ELE2023",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Instrumentos de Medidas Elétricas",
-          size: 2,
-          teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
-          ],
-          classroom: "Laboratório de Eletrônica",
-          students: "ELE2023",
-          time: "19:00 - 19:50"
         }
       ]
     }
