--- a/docs/turma/elm2022.mdx
+++ b/docs/turma/elm2022.mdx
@@ -9,7 +9,7 @@ const data = {
           subject: "Eletrônica de Potência",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Laboratório de Eletrônica",
           students: "ELM2022",
@@ -59,7 +59,7 @@ const data = {
           subject: "Eletrônica de Potência",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Laboratório de Eletrônica",
           students: "ELM2022",
