--- a/docs/turma/iiw2022b.mdx
+++ b/docs/turma/iiw2022b.mdx
@@ -21,7 +21,7 @@ const data = {
           teachers: [
             "Maicon Felipe Malacarne"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "15:05 - 15:55"
         },
@@ -31,7 +31,7 @@ const data = {
           teachers: [
             "Paula Magalhães Souza Deccache"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "07:30 - 08:20"
         },
@@ -41,7 +41,7 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "09:25 - 10:15"
         },
@@ -51,7 +51,7 @@ const data = {
           teachers: [
             "Talita Bortolini"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "13:10 - 14:00"
         }
@@ -61,14 +61,14 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Química II",
-          size: 2,
+          subject: "Arte I",
+          size: 1,
           teachers: [
-            "Elizangela Cavazzini Cesca"
+            "Josiane Paula Maltauro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
-          time: "09:25 - 10:15"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Arte I",
@@ -76,9 +76,9 @@ const data = {
           teachers: [
             "Josiane Paula Maltauro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
-          time: "11:05 - 11:55"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Física II",
@@ -86,19 +86,29 @@ const data = {
           teachers: [
             "Maicon Felipe Malacarne"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "15:05 - 15:55"
         },
         {
           subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
+          size: 1,
           teachers: [
             "Olavo José Luiz Junior"
           ],
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "Sala 6",
           students: "IIW2022B",
-          time: "07:30 - 08:20"
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Matemática II",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "Sala 6",
+          students: "IIW2022B",
+          time: "09:25 - 10:15"
         },
         {
           subject: "Língua Portuguesa e Literatura II",
@@ -106,7 +116,7 @@ const data = {
           teachers: [
             "Taiana Pensin"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "13:10 - 14:00"
         }
@@ -131,7 +141,7 @@ const data = {
           teachers: [
             "Renato Lada Guerreiro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "11:05 - 11:55"
         },
@@ -141,7 +151,7 @@ const data = {
           teachers: [
             "Sérgio Augusto Dias Castro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "07:30 - 08:20"
         }
@@ -151,34 +161,44 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Arte I",
-          size: 1,
+          subject: "Química II",
+          size: 2,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Kathia Regina Kunzler Bechlin"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
+          size: 1,
           teachers: [
             "Olavo José Luiz Junior"
           ],
           classroom: "Laboratório de Informatica BioPark",
           students: "IIW2022B",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
-          subject: "Matemática II",
-          size: 2,
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 1,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Olavo José Luiz Junior"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 1,
+          teachers: [
+            "Olavo José Luiz Junior"
+          ],
+          classroom: "Laboratório de Informatica BioPark",
+          students: "IIW2022B",
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -191,7 +211,7 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "09:25 - 10:15"
         },
@@ -201,7 +221,7 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "07:30 - 08:20"
         },
@@ -211,7 +231,7 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "08:20 - 09:10"
         },
