--- a/docs/turma/iiw2023b.mdx
+++ b/docs/turma/iiw2023b.mdx
@@ -21,7 +21,7 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         },
@@ -31,7 +31,7 @@ const data = {
           teachers: [
             "Maicon Felipe Malacarne"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "13:10 - 14:00"
         },
@@ -41,7 +41,7 @@ const data = {
           teachers: [
             "Paula Magalhães Souza Deccache"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "10:15 - 11:05"
         },
@@ -51,7 +51,7 @@ const data = {
           teachers: [
             "Talita Bortolini"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "15:05 - 15:55"
         }
@@ -71,22 +71,12 @@ const data = {
           time: "10:15 - 11:05"
         },
         {
-          subject: "Química I",
-          size: 2,
-          teachers: [
-            "Elizangela Cavazzini Cesca"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Lingua estrangeira - Inglês",
           size: 1,
           teachers: [
             "Josiane Hammes"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         },
@@ -96,9 +86,19 @@ const data = {
           teachers: [
             "Maicon Felipe Malacarne"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "13:10 - 14:00"
+        },
+        {
+          subject: "Matemática I",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "Sala 8",
+          students: "IIW2023B",
+          time: "07:30 - 08:20"
         },
         {
           subject: "Língua Portuguesa e Literatura I",
@@ -106,7 +106,7 @@ const data = {
           teachers: [
             "Taiana Pensin"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "15:05 - 15:55"
         }
@@ -131,7 +131,7 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "11:05 - 11:55"
         },
@@ -141,7 +141,7 @@ const data = {
           teachers: [
             "Sérgio Augusto Dias Castro"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         }
@@ -151,12 +151,22 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
+          subject: "Química I",
+          size: 2,
+          teachers: [
+            "Kathia Regina Kunzler Bechlin"
+          ],
+          classroom: "Sala 8",
+          students: "IIW2023B",
+          time: "07:30 - 08:20"
+        },
+        {
           subject: "Lingua estrangeira - Inglês",
           size: 1,
           teachers: [
             "Josiane Hammes"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         },
@@ -167,16 +177,6 @@ const data = {
             "Luis Henrique Manosso Von Mecheln"
           ],
           classroom: "Laboratório de Informatica BioPark",
-          students: "IIW2023B",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Matemática I",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "BioPark-02",
           students: "IIW2023B",
           time: "10:15 - 11:05"
         }
@@ -191,7 +191,7 @@ const data = {
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "10:15 - 11:05"
         },
@@ -211,7 +211,7 @@ const data = {
           teachers: [
             "Milton Aparecido Azevedo"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         }
