--- a/docs/turma/tds2023-2s.mdx
+++ b/docs/turma/tds2023-2s.mdx
@@ -11,7 +11,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         },
@@ -21,7 +21,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
         }
@@ -36,7 +36,7 @@ const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
         },
@@ -46,7 +46,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         }
@@ -61,7 +61,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
         },
@@ -71,7 +71,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         }
@@ -86,7 +86,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         },
@@ -96,7 +96,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
         }
@@ -111,7 +111,7 @@ const data = {
           teachers: [
             "Olavo José Luiz Junior"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         }
