--- a/docs/professor/maicon_felipe_malacarne.mdx
+++ b/docs/professor/maicon_felipe_malacarne.mdx
@@ -11,7 +11,7 @@ const data = {
           teachers: [
             "Maicon Felipe Malacarne"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "13:10 - 14:00"
         },
@@ -21,7 +21,7 @@ const data = {
           teachers: [
             "Maicon Felipe Malacarne"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "15:05 - 15:55"
         }
@@ -36,7 +36,7 @@ const data = {
           teachers: [
             "Maicon Felipe Malacarne"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "13:10 - 14:00"
         },
@@ -46,7 +46,7 @@ const data = {
           teachers: [
             "Maicon Felipe Malacarne"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "15:05 - 15:55"
         }
