--- a/docs/professor/novo_professor_de_eletrica_pss.mdx
+++ b/docs/professor/novo_professor_de_eletrica_pss.mdx
@@ -9,7 +9,7 @@ const data = {
           subject: "Eletrônica de Potência",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Laboratório de Eletrônica",
           students: "ELM2022",
@@ -19,17 +19,28 @@ const data = {
           subject: "Instrumentos de Medidas Elétricas",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
-          classroom: "Sala 9-2",
-          students: "ELM2023",
+          classroom: "Laboratório de Eletrônica",
+          students: "ELE2023",
           time: "19:00 - 19:50"
         }
       ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Instrumentos de Medidas Elétricas",
+          size: 2,
+          teachers: [
+            "Novo Professor de Elétrica PSS"
+          ],
+          classroom: "Sala 9-2",
+          students: "ELM2023",
+          time: "21:00 - 21:50"
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
@@ -38,7 +49,7 @@ const data = {
           subject: "Eletrônica de Potência",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Laboratório de Eletrônica",
           students: "ELM2022",
@@ -48,7 +59,7 @@ const data = {
           subject: "Eletrônica de Potência",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -63,7 +74,7 @@ const data = {
           subject: "Eletrônica de Potência",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -73,7 +84,7 @@ const data = {
           subject: "Instalações elétricas",
           size: 1,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -83,7 +94,7 @@ const data = {
           subject: "Instalações elétricas",
           size: 1,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -98,7 +109,7 @@ const data = {
           subject: "Instalações elétricas",
           size: 1,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
@@ -108,21 +119,11 @@ const data = {
           subject: "Instalações elétricas",
           size: 1,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 6-2",
           students: "ELE2022",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Instrumentos de Medidas Elétricas",
-          size: 2,
-          teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
-          ],
-          classroom: "Laboratório de Eletrônica",
-          students: "ELE2023",
-          time: "19:00 - 19:50"
         }
       ]
     }
