--- a/docs/professor/olavo_jose_luiz_junior.mdx
+++ b/docs/professor/olavo_jose_luiz_junior.mdx
@@ -33,13 +33,13 @@ const data = {
         },
         {
           subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
+          size: 1,
           teachers: [
             "Olavo José Luiz Junior"
           ],
-          classroom: "Laboratório de Informatica BioPark",
+          classroom: "Sala 6",
           students: "IIW2022B",
-          time: "07:30 - 08:20"
+          time: "11:05 - 11:55"
         }
       ]
     },
@@ -75,13 +75,33 @@ const data = {
       dayClasses: [
         {
           subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
+          size: 1,
           teachers: [
             "Olavo José Luiz Junior"
           ],
           classroom: "Laboratório de Informatica BioPark",
           students: "IIW2022B",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 1,
+          teachers: [
+            "Olavo José Luiz Junior"
+          ],
+          classroom: "Sala 6",
+          students: "IIW2022B",
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 1,
+          teachers: [
+            "Olavo José Luiz Junior"
+          ],
+          classroom: "Laboratório de Informatica BioPark",
+          students: "IIW2022B",
+          time: "08:20 - 09:10"
         },
         {
           subject: "Lógica de Programação",
@@ -116,7 +136,7 @@ const data = {
           teachers: [
             "Olavo José Luiz Junior"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         },
