--- a/docs/professor/rafael_luis_bartz.mdx
+++ b/docs/professor/rafael_luis_bartz.mdx
@@ -15,7 +15,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         }
@@ -30,7 +30,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
         },
@@ -40,7 +40,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         }
@@ -55,7 +55,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "19:00 - 19:50"
         },
@@ -65,7 +65,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "TDS2023-2S",
           time: "21:00 - 21:50"
         }
@@ -90,7 +90,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "TDS2023-3S",
           time: "21:00 - 21:50"
         },
@@ -100,7 +100,7 @@ const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "TDS2023-3S",
           time: "19:00 - 19:50"
         }
