--- a/docs/professor/rafael_silva_santos.mdx
+++ b/docs/professor/rafael_silva_santos.mdx
@@ -7,13 +7,23 @@ const data = {
       dayClasses: [
         {
           subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
+          size: 1,
           teachers: [
             "Rafael Silva Santos"
           ],
           classroom: "Laboratório de Computação Aplicada",
           students: "IIW2022A",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 1,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Sala 13-2",
+          students: "IIW2022A",
+          time: "10:15 - 11:05"
         },
         {
           subject: "Informática Básica",
@@ -56,13 +66,23 @@ const data = {
       dayClasses: [
         {
           subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
+          size: 1,
           teachers: [
             "Rafael Silva Santos"
           ],
           classroom: "Laboratório de Computação Aplicada",
           students: "IIW2022A",
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 1,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Sala 13-2",
+          students: "IIW2022A",
+          time: "08:20 - 09:10"
         },
         {
           subject: "Comércio Eletrônico e Mídias Digitais",
@@ -73,6 +93,16 @@ const data = {
           classroom: "Laboratório de Informatica A",
           students: "TGC2021",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Informática Básica",
+          size: 1,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: "TAL2023",
+          time: "19:50 - 20:40"
         }
       ]
     },
@@ -88,16 +118,6 @@ const data = {
           classroom: "Sala 11-2",
           students: "TGC2021",
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Informática Básica",
-          size: 1,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: "TAL2023",
-          time: "19:50 - 20:40"
         }
       ]
     },
