--- a/docs/professor/sergio_augusto_dias_castro.mdx
+++ b/docs/professor/sergio_augusto_dias_castro.mdx
@@ -6,26 +6,6 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos da Matemática",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "Sala 7-2",
-          students: "ELE2023",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Fundamentos da Matemática",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "Sala 7-2",
-          students: "ELE2023",
-          time: "21:00 - 21:50"
-        },
-        {
           subject: "Matemática 1",
           size: 2,
           teachers: [
@@ -49,10 +29,6 @@ const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quarta-Feira",
       dayClasses: [
         {
           subject: "Matemática I",
@@ -60,7 +36,52 @@ const data = {
           teachers: [
             "Sérgio Augusto Dias Castro"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
+          students: "IIW2023B",
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Matemática II",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "Sala 6",
+          students: "IIW2022B",
+          time: "09:25 - 10:15"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Fundamentos da Matemática",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "Sala 7-2",
+          students: "ELE2023",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Fundamentos da Matemática",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "Sala 7-2",
+          students: "ELE2023",
+          time: "21:00 - 21:50"
+        },
+        {
+          subject: "Matemática I",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "09:25 - 10:15"
         },
@@ -70,7 +91,7 @@ const data = {
           teachers: [
             "Sérgio Augusto Dias Castro"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "07:30 - 08:20"
         }
@@ -78,28 +99,7 @@ const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Matemática I",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "BioPark-02",
-          students: "IIW2023B",
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Matemática II",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "BioPark-01",
-          students: "IIW2022B",
-          time: "07:30 - 08:20"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
