--- a/docs/professor/taiana_pensin.mdx
+++ b/docs/professor/taiana_pensin.mdx
@@ -15,7 +15,7 @@ const data = {
           teachers: [
             "Taiana Pensin"
           ],
-          classroom: "BioPark-02",
+          classroom: "Sala 8",
           students: "IIW2023B",
           time: "15:05 - 15:55"
         },
@@ -25,7 +25,7 @@ const data = {
           teachers: [
             "Taiana Pensin"
           ],
-          classroom: "BioPark-01",
+          classroom: "Sala 6",
           students: "IIW2022B",
           time: "13:10 - 14:00"
         }
