--- a/docs/professor/tatiane_martinazzo_portz.mdx
+++ b/docs/professor/tatiane_martinazzo_portz.mdx
@@ -37,18 +37,7 @@ const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Sociologia Rural",
-          size: 2,
-          teachers: [
-            "Tatiane Martinazzo Portz"
-          ],
-          classroom: "Sala 11-2",
-          students: "AGO2022",
-          time: "13:10 - 14:00"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
@@ -72,6 +61,16 @@ const data = {
           classroom: "Sala 14-2",
           students: "AGO2021",
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Sociologia Rural",
+          size: 2,
+          teachers: [
+            "Tatiane Martinazzo Portz"
+          ],
+          classroom: "Sala 11-2",
+          students: "AGO2022",
+          time: "10:15 - 11:05"
         }
       ]
     }
