--- a/docs/sala/sala_13-2.mdx
+++ b/docs/sala/sala_13-2.mdx
@@ -39,11 +39,21 @@ const data = {
           subject: "Gestão Empresarial",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 13-2",
           students: "TGC2023",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 1,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Sala 13-2",
+          students: "IIW2022A",
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -89,11 +99,21 @@ const data = {
           subject: "Gestão Empresarial",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 13-2",
           students: "TGC2023",
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 1,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Sala 13-2",
+          students: "IIW2022A",
+          time: "08:20 - 09:10"
         },
         {
           subject: "Arte I",
