--- a/docs/sala/sala_3-1.mdx
+++ b/docs/sala/sala_3-1.mdx
@@ -31,10 +31,10 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Plano de Marketing",
+          subject: "Contabilidade de Custos e Formação de Preços",
           size: 2,
           teachers: [
-            "Keyla Christina Almeida Portela"
+            "Cesar Gomes de Freitas"
           ],
           classroom: "Sala 3-1",
           students: "TGC2022",
@@ -73,17 +73,17 @@ const data = {
           ],
           classroom: "Sala 3-1",
           students: "TGC2022",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         },
         {
-          subject: "Contabilidade de Custos e Formação de Preços",
+          subject: "Plano de Marketing",
           size: 2,
           teachers: [
-            "Cesar Gomes de Freitas"
+            "Keyla Christina Almeida Portela"
           ],
           classroom: "Sala 3-1",
           students: "TGC2022",
-          time: "21:00 - 21:50"
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -114,7 +114,7 @@ const data = {
           subject: "Gestão Estratégica de Pessoas",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 3-1",
           students: "TGC2022",
@@ -124,7 +124,7 @@ const data = {
           subject: "Técnicas de Vendas e Negociação",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 3-1",
           students: "TGC2022",
