--- a/docs/sala/sala_9-2.mdx
+++ b/docs/sala/sala_9-2.mdx
@@ -36,6 +36,16 @@ const data = {
           time: "14:00 - 14:50"
         },
         {
+          subject: "Comunicação e Expressão",
+          size: 2,
+          teachers: [
+            "Kátia Cristiane Kobus Novaes"
+          ],
+          classroom: "Sala 9-2",
+          students: "ELM2023",
+          time: "19:00 - 19:50"
+        },
+        {
           subject: "História I",
           size: 1,
           teachers: [
@@ -44,16 +54,6 @@ const data = {
           classroom: "Sala 9-2",
           students: "IIW2023A",
           time: "13:10 - 14:00"
-        },
-        {
-          subject: "Instrumentos de Medidas Elétricas",
-          size: 2,
-          teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
-          ],
-          classroom: "Sala 9-2",
-          students: "ELM2023",
-          time: "19:00 - 19:50"
         }
       ]
     },
@@ -91,10 +91,10 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
-          subject: "Comunicação e Expressão",
+          subject: "Instrumentos de Medidas Elétricas",
           size: 2,
           teachers: [
-            "Kátia Cristiane Kobus Novaes"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 9-2",
           students: "ELM2023",
@@ -163,7 +163,7 @@ const data = {
           ],
           classroom: "Sala 9-2",
           students: "ELM2023",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         },
         {
           subject: "Sociologia I",
