--- a/docs/turma/elm2023.mdx
+++ b/docs/turma/elm2023.mdx
@@ -6,10 +6,10 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Instrumentos de Medidas Elétricas",
+          subject: "Comunicação e Expressão",
           size: 2,
           teachers: [
-            "Novo Professor de Elétrica PSS - 40h"
+            "Kátia Cristiane Kobus Novaes"
           ],
           classroom: "Sala 9-2",
           students: "ELM2023",
@@ -41,10 +41,10 @@ const data = {
           time: "19:00 - 19:50"
         },
         {
-          subject: "Comunicação e Expressão",
+          subject: "Instrumentos de Medidas Elétricas",
           size: 2,
           teachers: [
-            "Kátia Cristiane Kobus Novaes"
+            "Novo Professor de Elétrica PSS"
           ],
           classroom: "Sala 9-2",
           students: "ELM2023",
@@ -113,7 +113,7 @@ const data = {
           ],
           classroom: "Sala 9-2",
           students: "ELM2023",
-          time: "19:00 - 19:50"
+          time: "21:00 - 21:50"
         },
         {
           subject: "Desenho Técnico 2",
@@ -123,7 +123,7 @@ const data = {
           ],
           classroom: "Laboratório de Desenho Técnico / Sala 5-2",
           students: "ELM2023",
-          time: "21:00 - 21:50"
+          time: "19:00 - 19:50"
         }
       ]
     }
