--- a/docs/turma/iiw2022a.mdx
+++ b/docs/turma/iiw2022a.mdx
@@ -27,13 +27,23 @@ const data = {
         },
         {
           subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
+          size: 1,
           teachers: [
             "Rafael Silva Santos"
           ],
           classroom: "Laboratório de Computação Aplicada",
           students: "IIW2022A",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 1,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Sala 13-2",
+          students: "IIW2022A",
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -54,7 +64,7 @@ const data = {
           subject: "Química II",
           size: 2,
           teachers: [
-            "Kathia Regina Kunzler Bechlin"
+            "Elizangela Cavazzini Cesca"
           ],
           classroom: "Laboratório de Química",
           students: "IIW2022A",
@@ -107,13 +117,23 @@ const data = {
         },
         {
           subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
+          size: 1,
           teachers: [
             "Rafael Silva Santos"
           ],
           classroom: "Laboratório de Computação Aplicada",
           students: "IIW2022A",
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 1,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Sala 13-2",
+          students: "IIW2022A",
+          time: "08:20 - 09:10"
         },
         {
           subject: "Arte I",
