--- a/docs/turma/tgc2021.mdx
+++ b/docs/turma/tgc2021.mdx
@@ -19,7 +19,7 @@ const data = {
           subject: "Plano de Negócio",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 11-2",
           students: "TGC2021",
@@ -31,16 +31,6 @@ const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Logística aplicada",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 11-2",
-          students: "TGC2021",
-          time: "19:00 - 19:50"
-        },
-        {
           subject: "Gestão Ambiental e Desenvolvimento Sustentável",
           size: 2,
           teachers: [
@@ -49,6 +39,16 @@ const data = {
           classroom: "Sala 11-2",
           students: "TGC2021",
           time: "21:00 - 21:50"
+        },
+        {
+          subject: "Gestão da Informação e documentação",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "Sala 11-2",
+          students: "TGC2021",
+          time: "19:00 - 19:50"
         }
       ]
     },
@@ -56,10 +56,10 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Gestão da Informação e documentação",
+          subject: "Logística aplicada",
           size: 2,
           teachers: [
-            "Keyla Christina Almeida Portela"
+            "Cesar Gomes de Freitas"
           ],
           classroom: "Sala 11-2",
           students: "TGC2021",
@@ -109,7 +109,7 @@ const data = {
           subject: "Planejamento e Gestão estratégica",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 11-2",
           students: "TGC2021",
@@ -119,7 +119,7 @@ const data = {
           subject: "Planejamento e Gestão estratégica",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 11-2",
           students: "TGC2021",
