--- a/docs/turma/tgc2023.mdx
+++ b/docs/turma/tgc2023.mdx
@@ -19,7 +19,7 @@ const data = {
           subject: "Gestão Empresarial",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 13-2",
           students: "TGC2023",
@@ -69,7 +69,7 @@ const data = {
           subject: "Gestão Empresarial",
           size: 2,
           teachers: [
-            "Novo professor de Administração PSS - 40h"
+            "Novo professor de Administração PSS"
           ],
           classroom: "Sala 13-2",
           students: "TGC2023",
